rewrite benchmarks